--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		
 		<table border="0" width="920" align="center">
 			<tr>
-				<td> <img src="imagens/logo.png"/> </td>
+				<td> <img src="logo.png"/> </td>
 				<td align="right">
 
 					<a href="index.html"> Home | </a>
@@ -26,7 +26,7 @@
 			<tr>
 
 				<td colspan="2">
-					<img src="imagens/principal.png"/>
+					<img src="principal.png"/>
 				</td>
 
 			</tr>
