--- a/quemsomos.html
+++ b/quemsomos.html
@@ -11,7 +11,7 @@
 		
 		<table border="0" width="920" align="center">
 			<tr>
-				<td> <img src="imagens/logo.png"/> </td>
+				<td> <img src="logo.png"/> </td>
 				<td align="right">
 
 					<a href="index.html"> Home | </a>
@@ -24,7 +24,7 @@
 			<tr>
 
 				<td colspan="2">
-					<img src="imagens/quemsomos.jpeg"/>
+					<img src="quemsomos.jpeg"/>
 				</td>
 
 			</tr>
